fixed footer overlaying content on small mobile screens

--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,4 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  padding: 2rem;
-  box-sizing: border-box;
-  position: relative;
 }
